# lab055

./: .gitignore  CMakeLists.txt  README.md  print.cpp  print.hpp
.github/workflows/: blank.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: formatter.cpp  formatter.h
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_app/: CMakeLists.txt  main.cpp
hello_world_app/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
solver_app/: CMakeLists.txt  main.cpp
solver_app/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver_app
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: test1.cpp
